[package]
name = "anti-cheat-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Jayson Quindao <djjrip>"]
description = "A lightweight, zero-overhead process scanning and active-window focus tracking SDK for Windows and macOS."
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"
